--- a/settings-local1.json
+++ b/settings-local1.json
@@ -4,6 +4,8 @@
       "127.0.0.1"
 	],
   	"walletdir" : "/tmp/wallet1",
+    "walletpassword" : "cookies",
+    "walletseed" : "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
     "datadir" : "/tmp/data1",
 	"minconnections": 10,
     "rpcport" : 9085,
