--- a/settings.json
+++ b/settings.json
@@ -4,6 +4,8 @@
       "5.9.86.168"
 	],
   	"walletdir" : "/tmp/wallet",
+    "walletpassword" : "cookies",
+    "walletseed" : "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
     "datadir" : "/tmp/data",
 	"minconnections": 10,
     "rpcport" : 9085,
