--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 app {
   product = "Scorex"
   release = "Lagonaki"
-  version = "1.0.4-SNAPSHOT"
+  version = "1.0.4"
   consensusAlgo = "ConsensusModuleNxt"
 }
