--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 app {
   product = "Scorex"
   release = "Lagonaki"
-  version = "1.1.0"
+  version = "1.1.1-SNAPSHOT"
   consensusAlgo = "NxtLikeConsensusModule"
 }
