--- a/settings-local1.json
+++ b/settings-local1.json
@@ -1,6 +1,6 @@
 {
     "bindAddress" : "127.0.0.1",
-  	"walletdir" : "/tmp/wallet1",
+  	"walletdir" : "/tmp/scorex/wallet1",
     "walletpassword" : "cookies",
     "walletseed" : "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
     "datadir" : "/tmp/data1",
