--- a/settings-local2.json
+++ b/settings-local2.json
@@ -3,7 +3,7 @@
 	"knownpeers":[
       "127.0.0.1"
 	],
-  	"walletdir" : "/tmp/wallet2",
+  	"walletdir" : "/tmp/scorex/wallet2",
     "walletpassword" : "cookies",
     "walletseed" : "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
     "datadir" : "/tmp/data2",
