--- a/settings.json
+++ b/settings.json
@@ -6,7 +6,7 @@
   "walletdir" : "/tmp/scorex/wallet",
   "walletpassword" : "cookies",
   "walletseed" : "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
-  "datadir" : "/tmp/data",
+  "datadir" : "/tmp/scorex/data",
   "minconnections": 10,
   "rpcport" : 9085,
   "rpcallowed":[
