--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,5 +2,5 @@ app {
   product = "Scorex"
   release = "Lagonaki"
   version = "1.1.3-SNAPSHOT"
-  consensusAlgo = "Perma"
+  consensusAlgo = "Nxt"
 }
