--- a/settings-local2.json
+++ b/settings-local2.json
@@ -5,7 +5,7 @@
 	],
   	"walletdir" : "/tmp/scorex/wallet2",
     "walletpassword" : "cookies",
-    "walletseed" : "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
+    "walletseed" : "111",
     "datadir" : "/tmp/scorex/data2",
 	"minconnections": 10,
     "rpcport" : 9086,
