--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,5 +2,5 @@ app {
   product = "Scorex"
   release = "Lagonaki"
   version = "1.2.0-SNAPSHOT"
-  consensusAlgo = "Nxt"
+  consensusAlgo = "perma"
 }
