--- a/settings-local1.json
+++ b/settings-local1.json
@@ -1,15 +1,18 @@
 {
-    "bindAddress" : "127.0.0.1",
-  	"walletdir" : "/tmp/scorex/wallet1",
-    "walletpassword" : "cookies",
-    "walletseed" : "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
-    "datadir" : "/tmp/scorex/data1",
-	"minconnections": 10,
-    "rpcport" : 9085,
-	"rpcallowed":[
-		"127.0.0.1",
-		"123.123.123.123"
-	],
-  	"max-rollback" : 100,
-  	"offline-generation" : true
+  "bindAddress": "127.0.0.1",
+  "walletdir": "/tmp/scorex/wallet1",
+  "walletpassword": "cookies",
+  "walletseed": "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
+  "datadir": "/tmp/scorex/data1",
+  "minconnections": 10,
+  "rpcport": 9085,
+  "rpcallowed": [
+    "127.0.0.1",
+    "123.123.123.123"
+  ],
+  "max-rollback": 100,
+  "offline-generation": true,
+  "perma": {
+    "isTrustedDealer": true
+  }
 }
