Different auth data storage for 2 local peers

--- a/settings-local1.json
+++ b/settings-local1.json
@@ -13,6 +13,7 @@
   "max-rollback": 100,
   "offline-generation": true,
   "perma": {
+    "authDataStorage": "authDataStorage1.mapDB",
     "isTrustedDealer": true
   }
 }
