no default values for perma dirs/files

--- a/settings-local1.json
+++ b/settings-local1.json
@@ -13,6 +13,7 @@
   "max-rollback": 100,
   "offline-generation": true,
   "perma": {
+    "treeDir": "/tmp/scorex/data1/tree",
     "authDataStorage": "authDataStorage1.mapDB",
     "isTrustedDealer": true
   }
