--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,3 +4,10 @@ app {
   version = "1.2.0-SNAPSHOT"
   consensusAlgo = "perma"
 }
+akka {
+  io {
+    tcp {
+      direct-buffer-size = 1024 KiB
+    }
+  }
+}
