Thrusted dealer don't generate blocks

--- a/settings-local2.json
+++ b/settings-local2.json
@@ -18,5 +18,6 @@
 	"perma": {
 		"treeDir": "/tmp/scorex/data2/tree",
 		"authDataStorage": "authDataStorage2.mapDB"
-	}
+	},
+	"blockGenerationDelay": 0
 }
