--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,7 +7,8 @@ app {
 akka {
   io {
     tcp {
-      direct-buffer-size = 1024 KiB
+      direct-buffer-size = 1536 KiB
+      trace-logging = off
     }
   }
 }
