--- a/settings-local1.json
+++ b/settings-local1.json
@@ -1,17 +1,25 @@
 {
-  "bindAddress": "127.0.0.1",
-  "walletdir": "/tmp/scorex/wallet1",
-  "walletpassword": "cookies",
-  "walletseed": "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
-  "datadir": "/tmp/scorex/data1",
-  "minconnections": 10,
-  "rpcport": 9085,
-  "rpcallowed": [
+  "p2p":{
+    "bindAddress": "127.0.0.1",
+    "upnp": true,
+    "upnpGatewayTimeout": 7000,
+    "upnpDiscoverTimeout": 3000,
+    "knownPeers": [
+      "5.9.86.168"
+    ],
+    "maxConnections": 10
+  },
+  "walletDir": "/tmp/scorex/wallet1",
+  "walletPassword": "cookies",
+  "walletSeed": "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
+  "dataDir": "/tmp/scorex/data1",
+  "rpcPort": 9085,
+  "rpcAllowed": [
     "127.0.0.1",
     "123.123.123.123"
   ],
-  "max-rollback": 100,
-  "offline-generation": true,
+  "maxRollback": 100,
+  "offlineGeneration": true,
   "perma": {
     "treeDir": "/tmp/scorex/data1/tree",
     "authDataStorage": "authDataStorage1.mapDB",
