--- a/settings-local2.json
+++ b/settings-local2.json
@@ -1,20 +1,25 @@
 {
-    "bindAddress" : "127.0.0.2",
-	"knownpeers":[
-      "127.0.0.1"
-	],
-  	"walletdir" : "/tmp/scorex/wallet2",
-    "walletpassword" : "cookies",
-    "walletseed" : "111",
-    "datadir" : "/tmp/scorex/data2",
-	"minconnections": 10,
-    "rpcport" : 9086,
-	"rpcallowed":[
+	"p2p":{
+		"bindAddress": "127.0.0.2",
+		"upnp": true,
+		"upnpGatewayTimeout": 7000,
+		"upnpDiscoverTimeout": 3000,
+		"knownPeers": [
+			"5.9.86.168"
+		],
+		"maxConnections": 10
+	},
+  	"walletDir" : "/tmp/scorex/wallet2",
+    "walletPassword" : "cookies",
+    "walletSeed" : "111",
+    "dataDir" : "/tmp/scorex/data2",
+    "rpcPort" : 9086,
+	"rpcAllowed":[
 		"127.0.0.1",
 		"123.123.123.123"
 	],
-  	"max-rollback" : 100,
-  	"offline-generation" : false,
+  	"maxRollback" : 100,
+  	"offlineGeneration" : false,
 	"perma": {
 		"treeDir": "/tmp/scorex/data2/tree",
 		"authDataStorage": "authDataStorage2.mapDB"
