--- a/settings-local1.json
+++ b/settings-local1.json
@@ -6,9 +6,7 @@
     "upnpGatewayTimeout": 7000,
     "upnpDiscoverTimeout": 3000,
     "port": 9084,
-    "knownPeers": [
-      "5.9.86.168"
-    ],
+    "knownPeers": [],
     "maxConnections": 10
   },
   "walletDir": "/tmp/scorex/wallet1",
