myAddress for local peers, 23.94.190.226 in settings.json, adding own address to the db

--- a/settings-local1.json
+++ b/settings-local1.json
@@ -1,6 +1,7 @@
 {
   "p2p": {
     "localOnly": true,
+    "myAddress": "127.0.0.1",
     "bindAddress": "127.0.0.1",
     "upnp": false,
     "upnpGatewayTimeout": 7000,
