--- a/settings-local2.json
+++ b/settings-local2.json
@@ -2,6 +2,7 @@
   "p2p": {
     "localOnly": true,
     "bindAddress": "127.0.0.2",
+    "myAddress": "127.0.0.2",
     "upnp": false,
     "upnpGatewayTimeout": 7000,
     "upnpDiscoverTimeout": 3000,
