--- a/settings.json
+++ b/settings.json
@@ -15,10 +15,7 @@
   "walletSeed": "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
   "dataDir": "/tmp/scorex/data",
   "rpcPort": 9085,
-  "rpcAllowed": [
-    "127.0.0.1",
-    "123.123.123.123"
-  ],
+  "rpcAllowed": [],
   "maxRollback": 100,
   "blockGenerationDelay": 0,
   "offlineGeneration": true,
