--- a/settings-local2.json
+++ b/settings-local2.json
@@ -7,9 +7,7 @@
     "upnpGatewayTimeout": 7000,
     "upnpDiscoverTimeout": 3000,
     "port": 9088,
-    "knownPeers": [
-      "127.0.0.1:9084"
-    ],
+    "knownPeers": ["127.0.0.1:9084"],
     "maxConnections": 10
   },
   "walletDir": "/tmp/scorex/wallet2",
