--- a/settings.json
+++ b/settings.json
@@ -1,12 +1,12 @@
 {
   "p2p": {
     "bindAddress": "0.0.0.0",
-    "upnp": true,
+    "upnp": false,
     "upnpGatewayTimeout": 7000,
     "upnpDiscoverTimeout": 3000,
     "port": 9084,
     "knownPeers": [
-      "23.94.190.226"
+      "23.94.190.226:9080"
     ],
     "maxConnections": 10
   },
@@ -18,7 +18,6 @@
   "rpcAllowed": [],
   "maxRollback": 100,
   "blockGenerationDelay": 0,
-  "offlineGeneration": true,
   "perma": {
     "treeDir": "/tmp/scorex/data/tree",
     "authDataStorage": "permatree.db"
