--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 app {
   product = "Scorex"
   release = "Lagonaki"
-  version = "1.2.0-SNAPSHOT"
+  version = "1.2.0-RC1"
   consensusAlgo = "perma"
 }
 
