MaxSegmentsInMessage = 64, trace-logging = on

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,8 +8,8 @@ app {
 akka {
   io {
     tcp {
-      direct-buffer-size = 1536 KiB
-      trace-logging = off
+      direct-buffer-size = 4192 KiB
+      trace-logging = on
     }
   }
 }
