--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,14 +1,14 @@
 app {
   product = "Scorex"
   release = "Lagonaki"
-  version = "1.2.0-SNAPSHOT"
+  version = "1.2.0-RC2"
   consensusAlgo = "perma"
 }
 
 akka {
   io {
     tcp {
-      direct-buffer-size = 4192 KiB
+      direct-buffer-size = 2096 KiB
       trace-logging = on
     }
   }
