--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,6 +1,6 @@
 app {
   product = "Scorex"
   release = "Lagonaki"
-  version = "1.2.0-SNAPSHOT"
+  version = "1.2.0-RC2"
   consensusAlgo = "nxt"
 }
