--- a/settings.json
+++ b/settings.json
@@ -18,7 +18,7 @@
   "blockGenerationDelay": 501,
   "mininigThreads": 2,
   "perma": {
-    "treeDir": "/tmp/scorex/data/tree",
+    "treeDir": "/tmp/scorex/data/tree/",
     "authDataStorage": "permatree.db"
   }
 }
