update to scorex 1.2.0

--- a/settings.json
+++ b/settings.json
@@ -12,14 +12,13 @@
   },
   "walletDir": "/tmp/scorex/wallet",
   "walletPassword": "cookies",
-  "walletSeed": "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
   "dataDir": "/tmp/scorex/data",
   "rpcPort": 9085,
   "rpcAllowed": [],
   "maxRollback": 100,
   "blockGenerationDelay": 0,
   "perma": {
-    "treeDir": "/tmp/scorex/data/tree",
+    "treeDir": "/tmp/scorex/data/tree/",
     "authDataStorage": "permatree.db"
   }
 }
