--- a/settings.json
+++ b/settings.json
@@ -14,6 +14,7 @@
   "dataDir": "/tmp/scorex/data",
   "rpcPort": 9085,
   "rpcAllowed": [],
+  "cors": true,
   "maxRollback": 100,
   "blockGenerationDelay": 501,
   "mininigThreads": 2,
