User cors=true for dealer

--- a/settings-dealer.json
+++ b/settings-dealer.json
@@ -15,6 +15,7 @@
   "rpcAllowed": [],
   "maxRollback": 100,
   "offlineGeneration": false,
+  "cors": true,
   "perma": {
     "isTrustedDealer": true,
     "treeDir": "/opt/scorex/data/tree",
