--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,6 @@
-
-akka {
-  io {
-    tcp {
-      direct-buffer-size = 1536 KiB
-      trace-logging = off
-    }
-  }
+app {
+  product = "Scorex"
+  release = "Lagonaki"
+  version = "1.2.2"
+  consensusAlgo = "perma"
 }
