generate 3 accounts per wallet

--- a/settings-local1.json
+++ b/settings-local1.json
@@ -8,6 +8,7 @@
     "maxConnections": 10
   },
   "walletDir": "/tmp/scorex/waves/wallet",
+  "walletSeed": "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
   "walletPassword": "mycookies",
   "dataDir": "/tmp/scorex/waves/data",
   "rpcPort": 6869,
