upgrade to Scorex 1.2.6

--- a/settings.json
+++ b/settings.json
@@ -5,16 +5,16 @@
     "upnpGatewayTimeout": 7000,
     "upnpDiscoverTimeout": 3000,
     "port": 6868,
-    "knownPeers": ["52.58.115.4:6868"],
+    "knownPeers": ["52.28.28.118:6868"],
     "maxConnections": 10
   },
-  "walletDir": "C:/tmp/scorex/waves/wallet",
-  "walletSeed": "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
+  "walletDir": "/tmp/scorex/waves/wallet",
+  "walletSeed": "tpqGWo8ED",
   "walletPassword": "mycookies",
-  "dataDir": "C:/tmp/scorex/waves/data",
+  "dataDir": "/tmp/scorex/waves/data",
   "rpcPort": 6869,
   "rpcAllowed": [],
-  "blockGenerationDelay": 1000,
+  "blockGenerationDelay": 10000,
   "cors": true,
   "maxRollback": 100,
   "history": "blockchain",
