migrate to scorex 1.3.0

--- a/settings.json
+++ b/settings.json
@@ -18,5 +18,6 @@
   "cors": true,
   "maxRollback": 100,
   "history": "blockchain",
+  "genesisTimestamp": 1460678400000,
   "offlineGeneration": false
 }
