waves.conf -> application.conf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 app {
-  product = "Scorex"
-  release = "Waves"
+  product = "Waves"
+  release = "Release0"
   version = "0.1.4"
   consensusAlgo = "waves"
 }
