--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 app {
   product = "TWaves"
   release = "Release0"
-  version = "0.2.0-RC7"
+  version = "0.2.0"
 }
 scorex {
   fastHash = "scorex.crypto.hash.Blake2b256"
