Bash scripts for building and creating github release artefacts were added. .gitignore was updated to ignore archives. SBT relock was executed after Scorex version update.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 .ensime_cache/
 scorex.yaml
 
-# scala build folders
+# scala build folders and files
 target
+*.tgz
+*.jar
 
 # dotfiles
 .dockerignore
