--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 app {
   product = "Waves"
   release = "Release0"
-  version = "0.2.5"
+  version = "0.2.6-SNAPSHOT"
 }
 scorex {
   fastHash = "scorex.crypto.hash.Blake2b256"
