Correct process exit code on errors

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,10 +7,13 @@ scorex {
   fastHash = "scorex.crypto.hash.Blake2b256"
   secureHash = "scorex.waves.crypto.HashChain"
 }
-akka.http {
-  server {
-    parsing {
-      max-method-length = 64
+akka {
+  log-dead-letters-during-shutdown = false
+  http {
+    server {
+      parsing {
+        max-method-length = 64
+      }
     }
   }
 }
