--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 app {
   product = "Waves"
   release = "Release0"
-  version = "0.2.7-SNAPSHOT"
+  version = "0.3.0"
 }
 scorex {
   fastHash = "scorex.crypto.hash.Blake2b256"
