Added akka actors slf4j logging

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,6 +8,20 @@ scorex {
   secureHash = "scorex.waves.crypto.HashChain"
 }
 akka {
+  loglevel = "DEBUG"
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  log-config-on-start = on
+  actor {
+    debug {
+      # enable DEBUG logging of actor lifecycle changes
+      lifecycle = on
+      # enable DEBUG logging of all AutoReceiveMessages (Kill, PoisonPill et.c.)
+      autoreceive = on
+      # enable function of LoggingReceive, which is to log any received message at DEBUG level
+      receive = on
+    }
+  }
   log-dead-letters-during-shutdown = false
   http {
     server {
