--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,6 +12,7 @@ akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   log-config-on-start = off
+  //logger-startup-timeout = 30s
   actor {
     debug {
       # enable DEBUG logging of actor lifecycle changes
@@ -28,6 +29,20 @@ akka {
       parsing {
         max-method-length = 64
       }
+    }
+  }
+
+  persistence {
+    journal {
+      plugin = akka.persistence.journal.leveldb
+      leveldb {
+        dir = "target/persistence/journal"
+        native = on
+      }
+    }
+    snapshot-store {
+      plugin = akka.persistence.snapshot-store.local
+      local.dir = "target/persistence/snapshots"
     }
   }
 }
