Asset Pair with WAVES

--- a/settings-local1.json
+++ b/settings-local1.json
@@ -7,13 +7,13 @@
     "port": 6868,
     "maxConnections": 10
   },
-  "walletDir": "/tmp/scorex/waves/wallet",
+  "walletDir": "/Users/koloale/waves/matcher/wallet",
   "walletSeed": "FQgbSAm6swGbtqA3NE8PttijPhT4N3Ufh4bHFAkyVnQz",
   "walletPassword": "mycookies",
-  "dataDir": "/tmp/scorex/waves/data",
+  "dataDir": "/Users/koloale/waves/matcher/data",
   "rpcPort": 6869,
   "rpcAllowed": [],
-  "blockGenerationDelay": 1000,
+  "blockGenerationDelay": 10000,
   "cors": true,
   "maxRollback": 100,
   "history": "blockchain",
