Waves version was set to 0.3.4-SNAPSHOT.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 app {
   product = "Waves"
   release = "Release0"
-  version = "0.3.3"
+  version = "0.3.4-SNAPSHOT"
 }
 scorex {
   fastHash = "scorex.crypto.hash.Blake2b256"
