Added deb build with upstart/systemd services

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,7 +11,7 @@ akka {
   loglevel = "DEBUG"
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  log-config-on-start = off
+  log-config-on-start = on
   actor {
     debug {
       # enable DEBUG logging of actor lifecycle changes
