Some tests were fixed. Version was set to 0.3.4.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,13 @@ target
 scorex.log
 scorex-errors.log
 scorex-*.log
+*.log
 
 # local settings
 localsettings.json
+
+# Text files
+*.txt
+*.ods
+*.csv
+*.dat
