Temporary removed the files for build different deb archs

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,10 +8,10 @@ scorex {
   secureHash = "scorex.waves.crypto.HashChain"
 }
 akka {
-  loglevel = "DEBUG"
+  loglevel = "INFO"
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  log-config-on-start = on
+  log-config-on-start = off
   actor {
     debug {
       # enable DEBUG logging of actor lifecycle changes
