--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,17 +1,17 @@
 app {
   product = "Waves"
   release = "Release0"
-  version = "0.3.4"
+  version = "0.3.4-SNAPSHOT"
 }
 scorex {
   fastHash = "scorex.crypto.hash.Blake2b256"
   secureHash = "scorex.waves.crypto.HashChain"
 }
 akka {
-  loglevel = "INFO"
+  loglevel = "DEBUG"
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  log-config-on-start = off
+  log-config-on-start = on
   actor {
     debug {
       # enable DEBUG logging of actor lifecycle changes
