--- a/src/main/resources/application-dev.conf
+++ b/src/main/resources/application-dev.conf
@@ -1,7 +1,7 @@
 app {
   product = "Waves"
   release = "Release0"
-  version = "0.3.5"
+  version = "0.3.6-SNAPSHOT"
 }
 scorex {
   fastHash = "scorex.crypto.hash.Blake2b256"
@@ -27,6 +27,7 @@ akka {
     server {
       parsing {
         max-method-length = 64
+        max-content-length = 2k
       }
     }
   }
