Akka persistence of OB events to json

--- a/settings-local1.json
+++ b/settings-local1.json
@@ -20,6 +20,7 @@
   "matcher": {
     "account": "3N3keodUiS8WLEw9W4BKDNxgNdUpwSnpb3K",
     "host": "127.0.0.1",
-    "port": 6870
+    "port": 6880,
+    "snapshotInterval": 2
   }
 }
