--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,7 +12,9 @@ akka {
     }
   }
   log-dead-letters-during-shutdown = false
+}
 
+akka {
   persistence {
     journal {
       plugin = akka.persistence.journal.leveldb
