--- a/src/main/resources/application-dev.conf
+++ b/src/main/resources/application-dev.conf
@@ -31,3 +31,32 @@ akka {
     }
   }
 }
+
+akka {
+  persistence {
+    journal {
+      plugin = akka.persistence.journal.leveldb
+      leveldb {
+        dir = "target/persistence/journal"
+        native = on
+      }
+    }
+    snapshot-store {
+      plugin = akka.persistence.snapshot-store.local
+      local.dir = "target/persistence/snapshots"
+    }
+  }
+}
+
+akka {
+  actor {
+    serializers {
+      orderEvents = "com.wavesplatform.matcher.model.EventSerializer"
+      orderSnapshot = "com.wavesplatform.matcher.model.SnapshotSerializer"
+    }
+    serialization-bindings {
+      "com.wavesplatform.matcher.model.Events$Event" = orderEvents
+      "com.wavesplatform.matcher.market.OrderBookActor$Snapshot" = orderSnapshot
+    }
+  }
+}
