--- a/src/main/resources/application-dev.conf
+++ b/src/main/resources/application-dev.conf
@@ -1,7 +1,7 @@
 app {
   product = "Waves"
   release = "Release0"
-  version = "0.4.0"
+  version = "0.4.1-SNAPSHOT"
 }
 scorex {
   fastHash = "scorex.crypto.hash.Blake2b256"
