Max request size extended to 1mb

--- a/src/main/resources/application-dev.conf
+++ b/src/main/resources/application-dev.conf
@@ -27,7 +27,7 @@ akka {
     server {
       parsing {
         max-method-length = 64
-        max-content-length = 2k
+        max-content-length = 1m
       }
     }
   }
