Test of API path '/node/version' was fixed.

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -22,8 +22,7 @@ akka {
   }
 }
 app {
-  product = "Scorex"
-  release = "Lagonaki"
-  version = "1.2.8"
-  consensusAlgo = "nxt"
+  product = "Waves"
+  release = "TestRelease"
+  version = "0.0.0"
 }
