T280: moved OrderBookCreated into MatchActor companion object

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -14,10 +14,12 @@ akka {
     serializers {
       orderEvents = "com.wavesplatform.matcher.model.EventSerializer"
       orderSnapshot = "com.wavesplatform.matcher.model.SnapshotSerializer"
+      orderBookCreated = "com.wavesplatform.matcher.model.OrderBookCreatedSerializer"
     }
     serialization-bindings {
       "com.wavesplatform.matcher.model.Events$Event" = orderEvents
       "com.wavesplatform.matcher.market.OrderBookActor$Snapshot" = orderSnapshot
+      "com.wavesplatform.matcher.market.MatcherActor$OrderBookCreated" = orderBookCreated
     }
   }
 }
