Use just one common serializer

--- a/src/main/resources/application-dev.conf
+++ b/src/main/resources/application-dev.conf
@@ -49,14 +49,13 @@ akka {
 akka {
   actor {
     serializers {
-      orderEvents = "com.wavesplatform.matcher.model.EventSerializer"
-      orderSnapshot = "com.wavesplatform.matcher.model.SnapshotSerializer"
-      orderBookCreated = "com.wavesplatform.matcher.model.OrderBookCreatedSerializer"
+      matcher = "com.wavesplatform.matcher.model.MatcherSerializer"
     }
     serialization-bindings {
-      "com.wavesplatform.matcher.model.Events$Event" = orderEvents
-      "com.wavesplatform.matcher.market.OrderBookActor$Snapshot" = orderSnapshot
-      "com.wavesplatform.matcher.market.MatcherActor$OrderBookCreated" = orderBookCreated
+      "java.io.Serializable" = none
+      "com.wavesplatform.matcher.model.Events$Event" = matcher
+      "com.wavesplatform.matcher.market.OrderBookActor$Snapshot" = matcher
+      "com.wavesplatform.matcher.market.MatcherActor$OrderBookCreated" = matcher
     }
   }
 }
