--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,27 +1,21 @@
-akka.persistence {
-  journal.plugin = "inmemory-journal"
-  snapshot-store.plugin = "inmemory-snapshot-store"
-}
-
-waves {
-  matcher {
-    publicKey = "TestMatcherPubKey"
-  }
-}
+waves.matcher.publicKey = "TestMatcherPubKey"
 
 akka {
-  actor {
-    serializers {
-      matcher = "com.wavesplatform.matcher.model.MatcherSerializer"
-    }
-    serialization-bindings {
-      "java.io.Serializable" = none
-      "com.wavesplatform.matcher.model.Events$Event" = matcher
-      "com.wavesplatform.matcher.market.OrderBookActor$Snapshot" = matcher
-      "com.wavesplatform.matcher.market.MatcherActor$OrderBookCreated" = matcher
-    }
+  loglevel = "DEBUG"
+  log-config-on-start = on
+
+  persistence {
+    journal.plugin = "inmemory-journal"
+    snapshot-store.plugin = "inmemory-snapshot-store"
+  }
+
+  actor.debug {
+    lifecycle = on
+    autoreceive = on
+    receive = on
   }
 }
+
 app {
   product = "Waves"
   release = "TestRelease"
