WIP: New settings case classes were implemented. Reading of configuration file was implemented. Tests on reading settings were added. Not all tests are green.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -54,3 +54,248 @@ akka {
     }
   }
 }
+
+# Waves node settins
+waves {
+  # Node base directory
+  directory: ${HOME}"/waves"
+
+  # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
+  logging-level: INFO
+
+  # P2P Network settings
+  network {
+    # Peers and blacklist storage file
+    file: ${waves.directory}"/data/peers.dat"
+
+    # Network address
+    bind-address: "127.0.0.1"
+
+    # Port number
+    port: 6868
+
+    # Node name to send during handshake. Comment this string out to set random node name.
+    #node-name: "default-nome-name"
+
+    # String with IP address and port to send as external address during handshake. Could be set automatically if uPnP is enabled.
+    declared-address: ""
+
+    # Node nonce to send during handshake. Should be different if few nodes runs on the same external IP address. Comment this out to set random nonce.
+    #nonce: 0
+
+    # List of IP addresses of well known nodes.
+    known-peers = ["8.8.8.8:6868", "4.4.8.8:68686"]
+
+    # Restricts node communication to local machine
+    local-only: no
+
+    # How long the information about peer stays in database after the last communication with it.
+    peers-data-residence-time: 1d
+
+    # How long peer stays in blacklist after getting in it.
+    black-list-residence-time: 10m
+
+    # How many network connections should node handle at once.
+    max-connections: 30
+
+    # Timeout on network communication with other peers.
+    connection-timeout: 30s
+
+    # Some buffer size (???)
+    outbound-buffer-size: 1K
+
+    # Minimal port number (???)
+    min-ephemeral-port-number: 35368
+
+    # I don't know (???)
+    max-unverified-peers: 0
+
+    # How othen connected peers list should be broadcasted (???)
+    peers-broadcast-interval: 2m
+
+    # How many incorrect packets have to be recieved from peer to decide to blacklist it.
+    black-list-threshold: 50
+
+    # How many unrequested packets from peer should be recieved before blacklisting the peer.
+    unrequested-packets-threshold: 100
+
+    # UPnP settings
+    upnp {
+      # Enable UPnP tunnel creation only if you router/gateway supports it. Useful if your node is runnin in home network. Completely unuseful if you node is in cloud.
+      enable: yes
+
+      # Timeouts (???)
+      gateway-timeout: 10s
+      discover-timeout: 10s
+    }
+  }
+
+  # Wallet settings
+  wallet {
+    # Path to wallet file
+    file: ${waves.directory}"/wallet/wallet.dat"
+
+    # Password to protect wallet file
+    password: "some string as password"
+
+    # Wallet seed as BASE58 string
+    seed: "BASE58SEED"
+  }
+
+  # Blockchain settings
+  blockchain {
+    # Path to blockchain file
+    file: ${waves.directory}"/data/blockchain.dat"
+
+    # Blockchain type. Could be TESTNET | MAINNET | CUSTOM. Default value is TESTNET.
+    type: CUSTOM
+
+    # 'custom' section present only if CUSTOM blockchain type is set. It's impossible to overwrite predefined 'testnet' and 'mainnet' configurations.
+    custom {
+      # Address feature character. Used to prevent mixin up addresses from different networks.
+      address-scheme-character: "C"
+
+      # Timestamps/heights of activation/deactivation of different funcions.
+      functionality {
+        allow-temporary-negative-until: 0
+        allow-invalid-payment-transactions-by-timestamp: 0
+        require-sorted-transactions-after: 0
+        generation-balance-depth-from-50-to-1000-after-height: 0
+        minimal-generating-balance-after: 0
+        allow-transactions-from-future-until: 0
+        allow-unissued-assets-until: 0
+        allow-burn-transaction-after: 0
+        require-payment-unique-id-after: 0
+      }
+
+      # List of genesis transactions
+      genesis {
+        # Timestamp of genesis block and transactions in it
+        timestamp: 1460678400000
+
+        # Genesis block signature
+        signature: "BASE58BLOCKSIGNATURE"
+
+        # Initial balance in smallest units
+        initial-balance: 100000000000000
+
+        # List of genesis transactions
+        transactions = [
+          {recipient: "BASE58ADDRESS1", amount: 50000000000000},
+          {recipient: "BASE58ADDRESS2", amount: 50000000000000}
+        ]
+      }
+    }
+  }
+
+  # Checkpoints settings
+  checkpoints {
+    # Public for checkpoints verification
+    public-key: "BASE58PUBLICKEY"
+  }
+
+  # Fees list
+  fees = [
+    {transaction-type: 2, asset: WAVES, fee: 100000}
+    {transaction-type: 3, asset: WAVES, fee: 100000000}
+    {transaction-type: 4, asset: WAVES, fee: 100000}
+    {transaction-type: 5, asset: WAVES, fee: 100000}
+    {transaction-type: 6, asset: WAVES, fee: 100000}
+    {transaction-type: 7, asset: WAVES, fee: 100000}
+    {transaction-type: 8, asset: WAVES, fee: 100000}
+  ]
+
+  # Matcher settings
+  matcher {
+    enable: yes
+    account: none
+    bind-address: "127.0.0.1"
+    port: 6886
+    min-order-fee: 100000
+    order-match-tx-fee: 100000
+    journal-directory: ${waves.directory}"/journal"
+    snapshots-directory: ${waves.directory}"/snapshots"
+    snapshots-interval: 1d
+    max-open-orders: 1000
+  }
+
+  # New blocks generator settings
+  miner {
+    # Enable/disable block generation
+    enable: yes
+
+    # Enable/disable off-line block generation
+    offline: no
+
+    # How many peers should be connected to node to start block generation
+    quorum: 1
+
+    # How often try to generate new block
+    generation-delay: 1s
+
+    # Enable block generation only in the last block is not older the given period of time
+    interval-after-last-block-then-generation-is-allowed: 1d
+
+    # Enable/disable TF-Like scheduling
+    tf-like-scheduling: yes
+  }
+
+  # Node's REST API settings
+  rest-api {
+    # Enable/disable REST API
+    enable: yes
+
+    # Network address to bing to
+    bind-address: "127.0.0.1"
+
+    # Port to listen to REST API requests
+    port: 6869
+
+    # Hash of API key string
+    api-key-hash: "BASE58APIKEYHASH"
+
+    # Enable/disable CORS support
+    cors: yes
+  }
+
+  # Nodes synchronization settings
+  synchronization {
+
+    # How many blocks could be rolled back if fork is detected. If fork is longer than this rollback is impossible.
+    max-rollback: 100
+
+    # I don't know
+    max-chain-length: 101
+
+    # Load only entire requested chain from peer then requested (???)
+    load-entire-chain: yes
+
+    # Timeout to recieve all requested blocks (???)
+    synchronization-timeout: 30s
+
+    # Stick to one peer while recieving requested blocks (???)
+    pin-to-initial-peer: yes
+
+    # How many times try to perform synchronization before sending peer to blacklist
+    retries-before-blacklisting: 2
+
+    # How many times retry operation (???)
+    operation-retires: 3
+
+    # Broadcast score every...
+    score-broadcast-interval: 30s
+
+    # Time to live for broadcasted score
+    score-ttl: 90s
+  }
+
+  # Unverified transactions pool settings
+  utx {
+
+    # Pool size
+    size: 10000
+
+    # Random transaction broadcast interval
+    broadcast-interval: 30s
+  }
+}
