WIP: Tests based on TestingCommons trait were repaired. Many tests are passing now, but not exotic ones.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -75,7 +75,7 @@ waves {
     port: 6868
 
     # Node name to send during handshake. Comment this string out to set random node name.
-    #node-name: "default-nome-name"
+    #node-name: "default-node-name"
 
     # String with IP address and port to send as external address during handshake. Could be set automatically if uPnP is enabled.
     declared-address: ""
@@ -107,10 +107,10 @@ waves {
     # Minimal port number (???)
     min-ephemeral-port-number: 35368
 
-    # I don't know (???)
-    max-unverified-peers: 0
+    # Size of circular buffer(???)
+    max-unverified-peers: 1000
 
-    # How othen connected peers list should be broadcasted (???)
+    # How often connected peers list should be broadcasted (???)
     peers-broadcast-interval: 2m
 
     # How many incorrect packets have to be recieved from peer to decide to blacklist it.
