--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -58,244 +58,255 @@ akka {
 # Waves node settins
 waves {
   # Node base directory
-  directory: ${HOME}"/waves"
+  directory = ${HOME}"/waves"
 
   # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
-  logging-level: INFO
+  logging-level = INFO
 
   # P2P Network settings
   network {
     # Peers and blacklist storage file
-    file: ${waves.directory}"/data/peers.dat"
+    file = ${waves.directory}"/data/peers.dat"
 
     # Network address
-    bind-address: "127.0.0.1"
+    bind-address = "127.0.0.1"
 
     # Port number
-    port: 6868
+    port = 6863
 
     # Node name to send during handshake. Comment this string out to set random node name.
-    #node-name: "default-node-name"
+    #node-name = "default-node-name"
 
     # String with IP address and port to send as external address during handshake. Could be set automatically if uPnP is enabled.
-    declared-address: ""
+    declared-address = ""
 
     # Node nonce to send during handshake. Should be different if few nodes runs on the same external IP address. Comment this out to set random nonce.
-    #nonce: 0
+    #nonce = 0
 
     # List of IP addresses of well known nodes.
-    known-peers = ["8.8.8.8:6868", "4.4.8.8:68686"]
+    known-peers = ["52.30.47.67:6863", "52.28.66.217:6863", "52.77.111.219:6863", "52.51.92.182:6863"]
 
     # Restricts node communication to local machine
-    local-only: no
+    local-only = no
 
-    # How long the information about peer stays in database after the last communication with it.
-    peers-data-residence-time: 1d
+    # How long the information about peer stays in database after the last communication with it
+    peers-data-residence-time = 1d
 
-    # How long peer stays in blacklist after getting in it.
-    black-list-residence-time: 10m
+    # How long peer stays in blacklist after getting in it
+    black-list-residence-time = 10m
 
-    # How many network connections should node handle at once.
-    max-connections: 30
+    # How many network connections should node handle at once
+    max-connections = 30
 
-    # Timeout on network communication with other peers.
-    connection-timeout: 30s
+    # Timeout on network communication with other peers
+    connection-timeout = 30s
 
-    # Some buffer size (???)
-    outbound-buffer-size: 1K
+    # Network buffer size
+    outbound-buffer-size = 1K
 
-    # Minimal port number (???)
-    min-ephemeral-port-number: 35368
+    # Minimal ephemeral port number, used to distiguish incoming connections
+    min-ephemeral-port-number = 35368
 
-    # Size of circular buffer(???)
-    max-unverified-peers: 1000
+    # Size of circular buffer to store unverified (not properly handshaked) peers
+    max-unverified-peers = 1000
 
-    # How often connected peers list should be broadcasted (???)
-    peers-broadcast-interval: 2m
+    # How often connected peers list should be broadcasted
+    peers-broadcast-interval = 2m
 
-    # How many incorrect packets have to be recieved from peer to decide to blacklist it.
-    black-list-threshold: 50
+    # How many incorrect packets have to be recieved from peer to decide to blacklist it
+    black-list-threshold = 50
 
-    # How many unrequested packets from peer should be recieved before blacklisting the peer.
-    unrequested-packets-threshold: 100
+    # How many unrequested packets from peer should be recieved before blacklisting the peer
+    unrequested-packets-threshold = 100
 
     # UPnP settings
     upnp {
       # Enable UPnP tunnel creation only if you router/gateway supports it. Useful if your node is runnin in home network. Completely unuseful if you node is in cloud.
-      enable: yes
+      enable = yes
 
-      # Timeouts (???)
-      gateway-timeout: 10s
-      discover-timeout: 10s
+      # UPnP timeouts
+      gateway-timeout = 7s
+      discover-timeout = 3s
     }
   }
 
   # Wallet settings
   wallet {
     # Path to wallet file
-    file: ${waves.directory}"/wallet/wallet.dat"
+    file = ${waves.directory}"/wallet/wallet.dat"
 
     # Password to protect wallet file
-    password: "some string as password"
+    password = "some string as password"
 
     # Wallet seed as BASE58 string
-    seed: "BASE58SEED"
+    seed = ""
   }
 
   # Blockchain settings
   blockchain {
     # Path to blockchain file
-    file: ${waves.directory}"/data/blockchain.dat"
+    file = ${waves.directory}"/data/blockchain.dat"
 
     # Blockchain type. Could be TESTNET | MAINNET | CUSTOM. Default value is TESTNET.
-    type: CUSTOM
+    type = TESTNET
 
     # 'custom' section present only if CUSTOM blockchain type is set. It's impossible to overwrite predefined 'testnet' and 'mainnet' configurations.
-    custom {
-      # Address feature character. Used to prevent mixin up addresses from different networks.
-      address-scheme-character: "C"
-
-      # Timestamps/heights of activation/deactivation of different funcions.
-      functionality {
-        allow-temporary-negative-until: 0
-        allow-invalid-payment-transactions-by-timestamp: 0
-        require-sorted-transactions-after: 0
-        generation-balance-depth-from-50-to-1000-after-height: 0
-        minimal-generating-balance-after: 0
-        allow-transactions-from-future-until: 0
-        allow-unissued-assets-until: 0
-        allow-burn-transaction-after: 0
-        require-payment-unique-id-after: 0
-      }
-
-      # List of genesis transactions
-      genesis {
-        # Timestamp of genesis block and transactions in it
-        timestamp: 1460678400000
-
-        # Genesis block signature
-        signature: "BASE58BLOCKSIGNATURE"
-
-        # Initial balance in smallest units
-        initial-balance: 100000000000000
-
-        # List of genesis transactions
-        transactions = [
-          {recipient: "BASE58ADDRESS1", amount: 50000000000000},
-          {recipient: "BASE58ADDRESS2", amount: 50000000000000}
-        ]
-      }
-    }
+#    custom {
+#      # Address feature character. Used to prevent mixin up addresses from different networks.
+#      address-scheme-character = "C"
+#
+#      # Timestamps/heights of activation/deactivation of different funcions.
+#      functionality {
+#        allow-temporary-negative-until = 0
+#        allow-invalid-payment-transactions-by-timestamp = 0
+#        require-sorted-transactions-after = 0
+#        generation-balance-depth-from-50-to-1000-after-height = 0
+#        minimal-generating-balance-after = 0
+#        allow-transactions-from-future-until = 0
+#        allow-unissued-assets-until = 0
+#        allow-burn-transaction-after = 0
+#        require-payment-unique-id-after = 0
+#      }
+#
+#      # List of genesis transactions
+#      genesis {
+#        # Timestamp of genesis block and transactions in it
+#        timestamp = 1460678400000
+#
+#        # Genesis block signature
+#        signature = "BASE58BLOCKSIGNATURE"
+#
+#        # Initial balance in smallest units
+#        initial-balance = 100000000000000
+#
+#        # List of genesis transactions
+#        transactions = [
+#          {recipient = "BASE58ADDRESS1", amount = 50000000000000},
+#          {recipient = "BASE58ADDRESS2", amount = 50000000000000}
+#        ]
+#      }
+#    }
   }
 
   # Checkpoints settings
   checkpoints {
-    # Public for checkpoints verification
-    public-key: "BASE58PUBLICKEY"
+    # Public key for checkpoints verification, default TESTNET public key
+    public-key = "4PvoqxpWi7kCA9N3UXcEB9CZx4iPPeHX9jSYdAioPhnr"
   }
 
-  # Fees list
-  fees = [
-    {transaction-type: 2, asset: WAVES, fee: 100000}
-    {transaction-type: 3, asset: WAVES, fee: 100000000}
-    {transaction-type: 4, asset: WAVES, fee: 100000}
-    {transaction-type: 5, asset: WAVES, fee: 100000}
-    {transaction-type: 6, asset: WAVES, fee: 100000}
-    {transaction-type: 7, asset: WAVES, fee: 100000}
-    {transaction-type: 8, asset: WAVES, fee: 100000}
-  ]
+  # Transaction fees for different types of transactions
+  fees {
+    payment {
+      WAVES = 100000
+    }
+    issue {
+      WAVES = 100000000
+    }
+    transfer {
+      WAVES = 100000
+    }
+    reissue {
+      WAVES = 100000
+    }
+    burn {
+      WAVES = 100000
+    }
+    exchange {
+      WAVES = 100000
+    }
+  }
 
   # Matcher settings
   matcher {
-    enable: yes
-    account: none
-    bind-address: "127.0.0.1"
-    port: 6886
-    min-order-fee: 100000
-    order-match-tx-fee: 100000
-    journal-directory: ${waves.directory}"/journal"
-    snapshots-directory: ${waves.directory}"/snapshots"
-    snapshots-interval: 1d
-    max-open-orders: 1000
+    enable = yes
+    account = none
+    bind-address = "127.0.0.1"
+    port = 6886
+    min-order-fee = 100000
+    order-match-tx-fee = 100000
+    journal-directory = ${waves.directory}"/journal"
+    snapshots-directory = ${waves.directory}"/snapshots"
+    snapshots-interval = 1d
+    max-open-orders = 1000
   }
 
   # New blocks generator settings
   miner {
     # Enable/disable block generation
-    enable: yes
+    enable = yes
 
     # Enable/disable off-line block generation
-    offline: no
+    offline = no
 
     # How many peers should be connected to node to start block generation
-    quorum: 1
+    quorum = 1
 
     # How often try to generate new block
-    generation-delay: 1s
+    generation-delay = 15s
 
     # Enable block generation only in the last block is not older the given period of time
-    interval-after-last-block-then-generation-is-allowed: 1d
+    interval-after-last-block-then-generation-is-allowed = 1d
 
     # Enable/disable TF-Like scheduling
-    tf-like-scheduling: yes
+    tf-like-scheduling = yes
   }
 
   # Node's REST API settings
   rest-api {
     # Enable/disable REST API
-    enable: yes
+    enable = yes
 
     # Network address to bing to
-    bind-address: "127.0.0.1"
+    bind-address = "127.0.0.1"
 
     # Port to listen to REST API requests
-    port: 6869
+    port = 6869
 
     # Hash of API key string
-    api-key-hash: "BASE58APIKEYHASH"
+    api-key-hash = "H6nsiifwYKYEx6YzYD7woP1XCn72RVvx6tC1zjjLXqsu"
 
     # Enable/disable CORS support
-    cors: yes
+    cors = yes
   }
 
   # Nodes synchronization settings
   synchronization {
 
     # How many blocks could be rolled back if fork is detected. If fork is longer than this rollback is impossible.
-    max-rollback: 100
+    max-rollback = 100
 
     # I don't know
-    max-chain-length: 101
+    max-chain-length = 101
 
-    # Load only entire requested chain from peer then requested (???)
-    load-entire-chain: yes
+    # Load only entire chain from peer then requested
+    load-entire-chain = yes
 
-    # Timeout to recieve all requested blocks (???)
-    synchronization-timeout: 30s
+    # Timeout to recieve all requested blocks
+    synchronization-timeout = 30s
 
-    # Stick to one peer while recieving requested blocks (???)
-    pin-to-initial-peer: yes
+    # Stick to one peer while recieving requested blocks
+    pin-to-initial-peer = yes
 
     # How many times try to perform synchronization before sending peer to blacklist
-    retries-before-blacklisting: 2
+    retries-before-blacklisting = 2
 
-    # How many times retry operation (???)
-    operation-retires: 3
+    # How many times to retry operations
+    operation-retires = 3
 
     # Broadcast score every...
-    score-broadcast-interval: 30s
+    score-broadcast-interval = 30s
 
     # Time to live for broadcasted score
-    score-ttl: 90s
+    score-ttl = 90s
   }
 
   # Unverified transactions pool settings
   utx {
 
     # Pool size
-    size: 10000
+    size = 10000
 
     # Random transaction broadcast interval
-    broadcast-interval: 30s
+    broadcast-interval = 30s
   }
 }
